# rust-postgres

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  Makefile.in  POSTGRES_LICENCE  README.md  THIRD_PARTY  build.rs  circle.yml  configure  docker-compose.yml  error.rs  lib.rs  message.rs  notes.md  pool.rs  shell.nix  test.rs  tests.rs  types.rs
.circleci/: config.yml
.direnv/: cache-pre278406.d3f7e969b98  drv
.github/: FUNDING.yml  dependabot.yml
.travis/: pg_hba.conf  server.crt  server.der  server.key  setup.sh  setup.sql  update_docs.sh
benches/: bench.rs
postgres/: CHANGELOG.md  Cargo.toml
postgres-derive/: CHANGELOG.md  Cargo.toml
postgres-derive/src/: accepts.rs  case.rs  composites.rs  enums.rs  field_variant_overrides.rs  fromsql.rs  lib.rs  lifetimes.rs  overrides.rs  rename_rule.rs  struct_overrides.rs  tosql.rs  transparent.rs
postgres-native-tls/: CHANGELOG.md  Cargo.toml
postgres-native-tls/src/: lib.rs  test.rs
postgres-openssl/: CHANGELOG.md  Cargo.toml  LICENSE-MIT
postgres-openssl/src/: lib.rs  test.rs
postgres-protocol/: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml
postgres-protocol/src/: authentication.rs  lib.rs  types.rs
postgres-protocol/src/authentication/: mod.rs  sasl.rs
postgres-protocol/src/error/: mod.rs
postgres-protocol/src/escape/: mod.rs
postgres-protocol/src/message/: backend.rs  frontend.rs
postgres-protocol/src/password/: mod.rs  test.rs
postgres-protocol/src/types/: mod.rs  numeric.rs  test.rs
postgres-shared/: Cargo.toml
postgres-shared/src/: lib.rs  rows.rs  stmt.rs
postgres-shared/src/error/: mod.rs  sqlstate.rs
postgres-shared/src/params/: mod.rs  url.rs
postgres-shared/src/types/: bit_vec.rs  chrono.rs  eui48.rs  geo.rs  mod.rs  rustc_serialize.rs  serde_json.rs  special.rs  time.rs  type_gen.rs  uuid.rs  uuid_07.rs
postgres-tokio/: Cargo.toml
postgres-tokio/src/: error.rs  lib.rs  rows.rs  stmt.rs  stream.rs  test.rs  transaction.rs  types.rs
postgres-tokio/src/tls/: mod.rs  openssl.rs
postgres-types/: CHANGELOG.md  Cargo.toml
postgres-types/src/: arrayvec.rs  bit_vec_06.rs  bit_vec_07.rs  bit_vec_08.rs  chrono_04.rs  cidr_02.rs  cidr_03.rs  eui48_04.rs  eui48_1.rs  geo_types_04.rs  geo_types_05.rs  geo_types_06.rs  geo_types_07.rs  jiff_01.rs  jiff_02.rs  lib.rs  money_01.rs  money_02.rs  pg_lsn.rs  private.rs  prost_012.rs  rend_05.rs  rkyv_08.rs  serde_json_1.rs  smol_str_01.rs  smol_str_02.rs  smol_str_03.rs  special.rs  time_02.rs  time_03.rs  type_gen.rs  url_2.rs  uuid_07.rs  uuid_08.rs  uuid_1.rs
postgres/benches/: bench.rs
postgres/src/: binary_copy.rs  builder.rs  cancel_token.rs  client.rs  config.rs  connection.rs  copy_in_stream.rs  copy_in_writer.rs  copy_out_reader.rs  error.rs  generic_client.rs  generic_connection.rs  iter.rs  lazy_pin.rs  lib.rs  macros.rs  notification.rs  notifications.rs  params.rs  portal.rs  priv_io.rs  query.rs  query_iter.rs  query_portal.rs  query_portal_iter.rs  row_iter.rs  rows.rs  simple_query.rs  simple_query_iter.rs  statement.rs  stmt.rs  test.rs  text_rows.rs  tls.rs  to_statement.rs  transaction.rs  transaction_builder.rs  types.rs
postgres/src/tls/: mod.rs  native_tls.rs  openssl.rs  schannel.rs  security_framework.rs
postgres/src/types/: chrono.rs  serde_json.rs
postgres/tests/: test.rs
postgres/tests/types/: bit_vec.rs  chrono.rs  eui48.rs  geo.rs  mod.rs  rustc_serialize.rs  serde_json.rs  time.rs  uuid.rs
src/: io.rs  (+20 more)
tokio-postgres/: CHANGELOG.md  Cargo.toml
tokio-postgres-binary-copy/: Cargo.toml
tokio-postgres-binary-copy/src/: lib.rs  test.rs
tokio-postgres-derive/: CHANGELOG.md  Cargo.toml
tokio-postgres-derive-test/: Cargo.toml
tokio-postgres-derive-test/src/: from_row.rs  lib.rs
tokio-postgres-derive/src/: from_row.rs  lib.rs
tokio-postgres-native-tls/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE
tokio-postgres-native-tls/src/: lib.rs  test.rs
tokio-postgres-openssl/: Cargo.toml
tokio-postgres-openssl/src/: lib.rs  test.rs
tokio-postgres/benches/: bench.rs
tokio-postgres/examples/: select1.rs
tokio-postgres/src/: binary_copy.rs  bind.rs  builder.rs  cancel_query.rs  cancel_query_raw.rs  cancel_token.rs  client.rs  codec.rs  column.rs  config.rs  connect.rs  connect_raw.rs  connect_socket.rs  connect_tls.rs  connection.rs  copy_both.rs  copy_in.rs  copy_out.rs  error.rs  from_row.rs  generic_client.rs  generic_result.rs  impls.rs  keepalive.rs  lib.rs  macros.rs  maybe_tls_stream.rs  portal.rs  prepare.rs  query.rs  replication.rs  replication_client.rs  responses.rs  row.rs  rows.rs  simple_query.rs  sink.rs  socket.rs  statement.rs  stmt.rs  (+8 more)
tokio-postgres/src/error/: mod.rs  sqlstate.rs
tokio-postgres/src/passfile/: mod.rs  test.rs
tokio-postgres/src/proto/: bind.rs  cancel.rs  cancel_query.rs  cancel_query_raw.rs  client.rs  codec.rs  connect.rs  connect_once.rs  connect_raw.rs  connect_socket.rs  connection.rs  copy_in.rs  copy_out.rs  execute.rs  handshake.rs  idle.rs  maybe_tls_stream.rs  mod.rs  portal.rs  prepare.rs  query.rs  responses.rs  row.rs  simple_query.rs  socket.rs  statement.rs  tls.rs  transaction.rs  typeinfo.rs  typeinfo_composite.rs  typeinfo_enum.rs
tokio-postgres/src/tls/: mod.rs  openssl.rs
tokio-postgres/src/types/: bit_vec.rs  bit_vec_05.rs  bit_vec_06.rs  chrono.rs  chrono_04.rs  eui48.rs  eui48_03.rs  eui48_04.rs  geo.rs  geo_010.rs  geo_011.rs  geo_types_04.rs  mod.rs  serde_json.rs  serde_json_1.rs  special.rs  type_gen.rs  uuid.rs  uuid_06.rs
tokio-postgres/tests/: test.rs
tokio-postgres/tests/test/: binary_copy.rs  copy_both.rs  main.rs  parse.rs  passfile.rs  replication.rs  runtime.rs
tokio-postgres/tests/test/types/: bit_vec_06.rs  bit_vec_07.rs  bit_vec_08.rs  chrono_04.rs  eui48_04.rs  eui48_1.rs  geo_010.rs  geo_types_04.rs  geo_types_05.rs  geo_types_06.rs  geo_types_07.rs  jiff_01.rs  jiff_02.rs  mod.rs  serde_json_1.rs  smol_str_01.rs  time_02.rs  time_03.rs  uuid_07.rs  uuid_08.rs  uuid_1.rs
tokio-postgres/tests/types/: bit_vec_07.rs  chrono_04.rs  eui48_04.rs  geo_010.rs  mod.rs
(+108 files in other folders)
