[workspace]
members = [
    "codegen",
    "postgres",
    "postgres-derive",
    "postgres-derive-test",
    "postgres-native-tls",
    "postgres-openssl",
    "postgres-protocol",
    "postgres-types",
    "tokio-postgres",
]
resolver = "2"

[workspace.dependencies]
fallible-iterator = "0.3"

[profile.release]
debug = 2
