[package]
name = "postgres-derive"
version = "0.4.3"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "An internal crate used by postgres-types"
repository = "https://github.com/sfackler/rust-postgres"

[lib]
proc-macro = true
test = false

[dependencies]
convert_case = "0.6"
itertools = "0.10"
syn = "1.0"
proc-macro2 = "1.0"
strum = "0.24"
strum_macros = "0.24"
quote = "1.0"
