[package]
name = "postgres-native-tls"
version = "0.2.0-rc.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "TLS support for tokio-postgres via native-tls"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[features]
default = ["runtime"]
runtime = ["tokio-postgres/runtime"]

[dependencies]
futures-preview = "=0.3.0-alpha.18"
native-tls = "0.2"
tokio-io = "=0.2.0-alpha.5"
tokio-tls = "=0.3.0-alpha.5"
tokio-postgres = { version = "0.4.0-rc.1", path = "../tokio-postgres", default-features = false }

[dev-dependencies]
tokio = "=0.2.0-alpha.5"
postgres = { version = "0.16.0-rc.1", path = "../postgres" }
