[package]
name = "postgres-native-tls"
version = "0.3.0-alpha.2"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "TLS support for tokio-postgres via native-tls"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[features]
default = ["runtime"]
runtime = ["tokio-postgres/runtime"]

[dependencies]
bytes = "0.5"
futures = "0.3"
native-tls = "0.2"
tokio = "0.2"
tokio-tls = "0.3"
tokio-postgres = { version = "0.5.0", path = "../tokio-postgres", default-features = false }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
postgres = { version = "=0.17.0-alpha.2", path = "../postgres" }
