[package]
name = "postgres-openssl"
version = "0.3.0-alpha.2"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "TLS support for tokio-postgres via openssl"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[features]
default = ["runtime"]
runtime = ["tokio-postgres/runtime"]

[dependencies]
bytes = "0.5"
futures = "0.3"
openssl = "0.10"
tokio = "0.2"
tokio-openssl = "0.4"
tokio-postgres = { version = "0.5.0", path = "../tokio-postgres", default-features = false }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
postgres = { version = "=0.17.0-alpha.2", path = "../postgres" }
