[package]
name = "postgres-openssl"
version = "0.5.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "TLS support for tokio-postgres via openssl"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[features]
default = ["runtime"]
runtime = ["tokio-postgres/runtime"]

[dependencies]
futures = "0.3"
openssl = "0.10"
tokio = "1.0"
tokio-openssl = "0.6"
tokio-postgres = { version = "0.7.0", path = "../tokio-postgres", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
postgres = { version = "0.19.0", path = "../postgres" }
