[package]
name = "postgres-openssl"
version = "0.5.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "TLS support for tokio-postgres via openssl"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[features]
default = ["runtime"]
runtime = ["tokio-postgres/runtime"]

[dependencies]
openssl = "0.10"
tokio = "1.0"
tokio-openssl = "0.6"
tokio-postgres = { version = "0.7.11", path = "../tokio-postgres", default-features = false }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1.0", features = ["macros", "net", "rt"] }
postgres = { version = "0.19.8", path = "../postgres" }
