[package]
name = "postgres-protocol"
version = "0.6.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
description = "Low level Postgres protocol APIs"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"

[dependencies]
base64 = "0.13"
byteorder = "1.0"
bytes = "1.0"
fallible-iterator = "0.2"
hmac = "0.10"
md-5 = "0.9"
memchr = "2.0"
rand = "0.8"
sha2 = "0.9"
stringprep = "0.1"
