[package]
name = "postgres-shared"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]

[features]
with-bit-vec = ["bit-vec"]
with-chrono = ["chrono"]
with-eui48 = ["eui48"]
with-rustc-serialize = ["rustc-serialize"]
with-serde_json = ["serde_json"]
with-time = ["time"]
with-uuid = ["uuid"]

[dependencies]
hex = "0.2"
fallible-iterator = "0.1.3"
phf = "=0.7.20"
postgres-protocol = "0.2"

bit-vec = { version = "0.4", optional = true }
chrono = { version = "0.2.14", optional = true }
eui48 = { version = "0.1", optional = true }
rustc-serialize = { version = "0.3", optional = true }
serde_json = { version = ">= 0.6, < 0.9", optional = true }
time = { version = "0.1.14", optional = true }
uuid = { version = ">= 0.1, < 0.4", optional = true }
