[package]
name = "postgres-shared"
version = "0.4.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "Internal crate used by postgres and postgres-tokio"
repository = "https://github.com/sfackler/rust-postgres"

[features]
with-bit-vec = ["bit-vec"]
with-chrono = ["chrono"]
with-eui48 = ["eui48"]
with-geo = ["geo"]
with-rustc-serialize = ["rustc-serialize"]
with-serde_json = ["serde_json"]
with-time = ["time"]
with-uuid = ["uuid"]

[dependencies]
hex = "0.2"
fallible-iterator = "0.1.3"
phf = "=0.7.21"
postgres-protocol = { version = "0.3", path = "../postgres-protocol" }

bit-vec = { version = "0.4", optional = true }
chrono = { version = "0.4", optional = true }
eui48 = { version = "0.3", optional = true }
geo = { version = "0.4", optional = true }
rustc-serialize = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }
time = { version = "0.1.14", optional = true }
uuid = { version = "0.6", optional = true }
