[package]
name = "postgres-shared"
version = "0.4.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "Internal crate used by postgres and postgres-tokio"
repository = "https://github.com/sfackler/rust-postgres"

[features]
"with-bit-vec-0.5" = ["bit-vec"]
"with-chrono-0.4" = ["chrono"]
"with-eui48-0.3" = ["eui48"]
"with-geo-0.8" = ["geo"]
with-serde_json-1 = ["serde_json"]
"with-uuid-0.6" = ["uuid"]

[dependencies]
hex = "0.3"
fallible-iterator = "0.1.3"
phf = "=0.7.22"
postgres-protocol = { version = "0.3", path = "../postgres-protocol" }

bit-vec = { version = "0.5", optional = true }
chrono = { version = "0.4", optional = true }
eui48 = { version = "0.3", optional = true }
geo = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }
uuid = { version = "0.6", optional = true }
