[package]
name = "tokio-postgres-binary-copy"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.0"
bytes = "0.5"
futures = "0.3"
pin-project-lite = "0.1"
tokio-postgres = { version = "=0.5.0-alpha.2", default-features = false, path = "../tokio-postgres" }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = { version = "=0.5.0-alpha.2", path = "../tokio-postgres" }
