[package]
name = "tokio-postgres-derive"
version = "0.0.0"
authors = ["tandemdrive"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Internal proc-macro crate for tokio-postgres"
repository = "https://github.com/sfackler/rust-postgres"

[lib]
proc-macro = true
test = false

[dependencies]
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
