[package]
name = "tokio-postgres-native-tls"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]

[dependencies]
futures = "0.1"
native-tls = "0.2"
tokio-io = "0.1"
tokio-tls = "0.2"
tokio-postgres = { version = "0.3", path = "../tokio-postgres" }

[dev-dependencies]
tokio = "0.1.7"
