[package]
name = "tokio-postgres-native-tls"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"

[features]
default = ["runtime"]
runtime = ["tokio-postgres/runtime"]

[dependencies]
futures = "0.1"
native-tls = "0.2"
tokio-io = "0.1"
tokio-tls = "0.2.1"
tokio-postgres = { version = "0.3", path = "../tokio-postgres", default-features = false }

[dev-dependencies]
tokio = "0.1.7"
