[package]
name = "tokio-postgres"
version = "0.5.0-alpha.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A native, asynchronous PostgreSQL client"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"
keywords = ["database", "postgres", "postgresql", "sql", "async"]
categories = ["database"]

[lib]
test = false

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[features]
default = ["runtime"]
runtime = ["tokio/dns", "tokio/net", "tokio/time"]

with-bit-vec-0_6 = ["postgres-types/with-bit-vec-0_6"]
with-chrono-0_4 = ["postgres-types/with-chrono-0_4"]
with-eui48-0_4 = ["postgres-types/with-eui48-0_4"]
with-geo-types-0_4 = ["postgres-types/with-geo-types-0_4"]
with-serde_json-1 = ["postgres-types/with-serde_json-1"]
with-uuid-0_7 = ["postgres-types/with-uuid-0_7"]
with-uuid-0_8 = ["postgres-types/with-uuid-0_8"]

[dependencies]
bytes = "0.5"
fallible-iterator = "0.2"
futures = "0.3"
log = "0.4"
parking_lot = "0.9"
percent-encoding = "2.0"
pin-project-lite = "0.1"
phf = "0.8"
postgres-protocol = { version = "=0.5.0-alpha.1", path = "../postgres-protocol" }
postgres-types = { version = "=0.1.0-alpha.1", path = "../postgres-types" }
tokio = { version = "0.2", features = ["io-util"] }
tokio-util = { version = "0.2", features = ["codec"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7"
criterion = "0.3"

bit-vec-06 = { version = "0.6", package = "bit-vec" }
chrono-04 = { version = "0.4", package = "chrono" }
eui48-04 = { version = "0.4", package = "eui48" }
geo-types-04 = { version = "0.4", package = "geo-types" }
serde-1 = { version = "1.0", package = "serde" }
serde_json-1 = { version = "1.0", package = "serde_json" }
uuid-07 = { version = "0.7", package = "uuid" }
uuid-08 = { version = "0.8", package = "uuid" }

